[package]
name = "ic-evm-sign"
version = "0.1.4"
edition = "2021"
description = "This library enables Internet Computer canisters to sign transactions for EVM-compatible blockchains"
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/ic-evm-sign"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.3"
serde = "1"
ethereum-rlp = "0.2.3"
easy-hasher = "2.2.1"
libsecp256k1 = { version = "0.7.1", default-features = true, features = ["lazy-static-context"] }
futures = "0.3.25"
